# data-platform-example

./: .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  .test.env  LICENSE  README-infrastructure.md  README.md  backend.tf  config.auto.tfvars  locals.tf  main.tf  providers.tf  variables.tf
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: app_ci.yml
etl_lambda/: README.md  docker-compose.yml  pyproject.toml
etl_lambda/etl_lambda/: __init__.py  config.py  exceptions.py  log_helper.py
terraform/modules/etl_lambda/: .terraform-docs.yml
terraform/modules/postgres/: .terraform-docs.yml  .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
terraform/modules/s3/: .terraform-docs.yml  data.tf  main.tf  variables.tf
terraform/modules/snowflake/: .terraform-docs.yml
